###########################################################################
#
# any docs in this directory need adding, add em to the 'docfiles' variable
#

docfiles      = index.html \
                install.html \
                win.html \
                usage.html \
                basic_code.html \
                mailer_class.html \
                functions.html \
                t-o-i.jpg \
                t-o-l.jpg \
                lib-set.jpg \
                main.css \
                Copying

man_MANS = jwsmtp.3

EXTRA_DIST = $(docfiles) jwsmtp.3

docfilesdir   = @datadir@/doc/@JWSMTP_LIBRARY_NAME@-@JWSMTP_API_VERSION@

docfiles_DATA = $(docfiles)

